# Rust package manifest for the Ultraviolet backend.
# This file declares the API and migration binaries plus the deliberately small
# dependency set used for auth, HTTP hardening, PostgreSQL, and observability.

[package]
name = "ultraviolet-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "ultraviolet-backend"
path = "src/main.rs"

[[bin]]
name = "ultraviolet-migrate"
path = "src/bin/migrate.rs"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
hex = "0.4"
hmac = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["chrono", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
